--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
   <script src="node_modules/angular/angular.js"></script>
   <script src="node_modules/angular-ui-router/angular-ui-router.js"></script>
 
+  <script src="src/app/app.module.js"></script>
   <script src="src/app/app.js"></script>
+  <script src="scr/years/vehicle-year.js"></script>
+  <script src="src/models/vehicle-model.js"></script>
+  <script src="src/vehicles/vehicle-list.component.js"></script>
 
 </body>
 
